# AOC2025

./: .gitignore  README.md
.github/workflows/: python-tests.yaml  typescript-tests.yaml  uiua-tests.yaml
python/: Makefile  README.md  pyproject.toml
python/generate_files/: cli.py
python/hybrid_solutions/: README.md  day_04.py  day_06.py  day_09.py
python/models/: aoc_solution.py
python/solutions/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py
python/tests/: test_solutions.py
typescript/: Makefile  eslint.config.js  eslint.config.ts  package-lock.json  package.json  tsconfig.json
typescript/helpers/: input.ts  run.ts
typescript/solutions/: day_01.ts  day_02.ts  day_03.ts  day_04.ts  day_05.ts  day_07.ts  day_08.ts  day_09.ts  day_11.ts  day_12.ts
typescript/tests/: solutions.test.ts
uiua/: Makefile  README.md
uiua/animations/: day_01_animated.ua  day_04_animated.ua  day_07_animated.ua  day_10_animated.ua
uiua/animations/data/: day10_jolts.txt  day10_schematics.txt  day10_sols.txt
uiua/helpers/: input.ua
uiua/solutions/: day_01.ua  day_02.ua  day_03.ua  day_04.ua  day_05.ua  day_06.ua  day_07.ua  day_08.ua  day_09.ua  day_11.ua  day_12.ua
uiua/tests/: test_solutions.ua
