[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025 Solutions"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Katie Gardner" }]
keywords = ["python", "uiua", "advent-of-code", "aoc", "aoc-2025"]
dependencies = [
    "advent-of-code-data>=2.0.0",
    "typer>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.7,<0.8"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""
module-name = ["generate_files", "models", "solutions"]

[project.scripts]
aoc = "generate_files.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "ty>=0.0.1a28",
]
